# lean-risc0-runtime

./: .gitignore  CMakeLists.txt  README.md  justfile
src/: CMakeLists.txt
src/include/lean/: lean.h
src/runtime/: compact.cpp  debug.cpp  debug.h  interrupt.cpp  io.cpp  libuv.cpp  memory.cpp  mutex.cpp  object.cpp  process.cpp  stack_overflow.cpp  stackinfo.cpp  thread.cpp  thread.h
src/runtime/uv/: dns.h  event_loop.h  net_addr.h  system.h  tcp.cpp  tcp.h  timer.h  udp.h
src/util/: io.h  path.cpp  path.h  shell.cpp
toolchains/: riscv32im-risc0-zkvm-elf.cmake
